# Cloth_Simulation

./: .gitignore  CMakeLists copy.txt  CMakeLists-zp.txt  CMakeLists.txt  README.md
includes/glad/: glad.h
src/: main.cpp  spring.h
src/include/: Cloth.h  Display.h  Rigid.h  cloth.h  display.h  mass.h  points.h  program.h  render.h  rigid.h  spring.h
